frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/import-feature-flag-modal/import-feature-flag-modal.component.scss
.drag-drop-container {
  display: flex;
  flex-direction: column;
  row-gap: 2px;
  padding: 40px 32px 24px;

  .form-hint {
    text-indent: 16px;
    margin-bottom: 0;
  }

  .spinner {
    width: 100%;
    margin: auto;
  }

  .file-compatibility-table {
    ::ng-deep thead {
      background-color: var(--zircon);

      tr.mat-mdc-header-row {
        height: 48px;
        border: 0;

        th {
          padding-left: 0;
          color: var(--darker-grey);

          &:first-child {
            border-top-left-radius: 4px;
          }

          &:last-child {
            border-top-right-radius: 4px;
          }
        }
      }
    }

    ::ng-deep tbody {
      tr.mat-mdc-row {
        height: 56px;

        td {
          min-width: 96px;
          padding-left: 0;
          color: var(--black-2);
        }
      }

      tr.mat-mdc-no-data-row {
        td {
          height: 48px;
          text-align: center;
          border: 1.5px dashed var(--light-grey-2);
          color: var(--dark-grey);
        }
      }
    }

    &.disabled {
      opacity: 0.5;
      cursor: default;
    }

    .cdk-column-actions {
      width: 10%;
    }

    .cdk-column-fileName {
      width: 60%;
    }

    .cdk-column-compatibilityType {
      width: 30%;
    }

    .expandable-row {
      padding: 0;
      width: 100%;

      .compatibility-details-container {
        min-height: 48px;
        padding: 12px 5% 12px 10%;
        display: flex;
        align-items: center;
      }
    }
  }
}

